added auth-service and integrated with library-service, updated README
